--- a/css/style.css
+++ b/css/style.css
@@ -108,6 +108,7 @@ main:not(.container) {
     position: absolute;
     /* margin-top: 1%; */
     z-index: 99;
+    margin-left: 1%;
 }
 
 #icons {
@@ -177,6 +178,19 @@ main:not(.container) {
     100% {
       opacity: 0;
     } */
+
+/* i.fa-brands.fa-github.not {
+    animation: gradient4 infinite alternate !important;
+} */
+
+.cards i {
+    color: black;
+    font-size: 7vw;
+}
+
+#picon {
+    color: red !important;
+}
     
 i.fa-brands.fa-linkedin-in {
     animation: gradient 1s infinite alternate !important;
@@ -187,7 +201,7 @@ i.fa-brands.fa-instagram {
 }
 
 i.fa-brands.fa-github {
-    animation: gradient3 1s infinite alternate !important;
+    animation: gradient3 1s infinite alternate;
 }
 
 
@@ -243,26 +257,24 @@ background: linear-gradient(180deg, rgba(84,86,205,1) 0%, rgba(248,8,159,1) 49%,
   } */
 
 .leftcont a {
-    color: black;
+    color: white;
     text-decoration: none;
-    /* font-size: 1.5vw; */
     font-size: 30px;
     display: inline-flex;
     justify-content: center;
     align-items: center;
-    background-color: white;
+    background-color: black;
     padding: 0.5rem;
-    border: 3px solid black;
+    border: 3px solid white;
     border-radius: 0.4rem;
-    margin-left: 13%;
-    /* transition: 05s ease; */
+    margin-left: 14%;
 }
 
 .leftcont a:hover {
-    color: white;
-    background-color: black;
+    color: black;
+    background-color: white;
     border: 3px solid white;
-    transition: 0.5s ease-in-out;
+    transition: 0.3s ease-in-out;
 }
 
 /* .cv {
@@ -308,7 +320,7 @@ background: linear-gradient(180deg, rgba(84,86,205,1) 0%, rgba(248,8,159,1) 49%,
     padding-top: 8%;
     max-width: 1900px;
     margin: auto;
-    padding-left: 10%;
+    padding-left: 8%;
     margin-right: 5%
 }
 
@@ -316,14 +328,14 @@ background: linear-gradient(180deg, rgba(84,86,205,1) 0%, rgba(248,8,159,1) 49%,
     /* text-align: center; */
     font-size: 6vw;
     font-family: "Teko", sans-serif;
+    margin-bottom: 2%
 }
 
 .aboutme {
     display: inline-grid;
-    justify-content: center;
+    justify-content: start;
     align-items: center;
     width: 50%;
-    padding-left: 5%;
     font-size: 30px;
 }
 
@@ -336,6 +348,7 @@ background: linear-gradient(180deg, rgba(84,86,205,1) 0%, rgba(248,8,159,1) 49%,
     display: flex;
     justify-content: center;
     align-items: center;
+    /* margin-left: -3%; */
 }
 
 .menu-btn {
@@ -370,7 +383,7 @@ background: linear-gradient(180deg, rgba(84,86,205,1) 0%, rgba(248,8,159,1) 49%,
     border: 1px solid black;
     border-radius: 1rem;
     padding: 2%;
-    height: auto;
+    height: 21rem;
 }
 
 .cardimg {
@@ -378,11 +391,11 @@ background: linear-gradient(180deg, rgba(84,86,205,1) 0%, rgba(248,8,159,1) 49%,
 }
 
 .skills {
-    margin-left: -5%;
+    margin-left: -11%;
 }
 
 .skills i {
-    font-size: 8vw;
+    font-size: 10vw;
 }
 
 /* .fa-html5 .fa-css3 .fa-js .fa-vuejs .fa-database .fa-wordpress-simple .fa-bootstrap .fa-node {
@@ -401,8 +414,6 @@ background: linear-gradient(180deg, rgba(84,86,205,1) 0%, rgba(248,8,159,1) 49%,
 
 .bottom-cards {
     display: flex;
-    justify-content: center;
-    align-items: center;
     width: 100%;
 }
 
@@ -411,123 +422,249 @@ background: linear-gradient(180deg, rgba(84,86,205,1) 0%, rgba(248,8,159,1) 49%,
     justify-content: center;
     align-items: center;
     width: 20%;
-    background-color: white;
+    /* background-color: white;
     color: black;
     border: 1px solid white;
-    border-radius: 1rem;
+    border-radius: 1rem; */
     margin-left: 5%;
-
 }
 
-
-
-/* slider style */
-
-/* .slider {
+.toprow {
     display: flex;
     justify-content: center;
+    align-items: center;
+    margin-left: -3%;
+}
+
+.bottomrow {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: -3%;
+}
+
+.pcardimg {
     width: 100%;
-    margin-bottom: 5%;
-    margin-left: auto;
-    margin-right: auto;
-    position: relative;
+    /* border: 1px solid black; */
 }
 
-.slider-images {
-    z-index: 20;
-    display: block;
-    max-width: 1300px;
+.pcardimg:hover {
+    background-color: transparent;
+    /* border: 5px solid white; */
+    box-shadow: 5px 5px 5px 5px black;
+    transition: ease-in-out 0.5s;
+    translate: 0 -1rem ;
+}
+
+.pcards {
+    background-color: white;
+    color: black;
+    width: 50%;
+    height: auto;
+    text-align: center;
+    margin-left: 3%;
+    margin-bottom: 3%;
+}
+
+i.fa-brands.fa-square-github {
+    font-size: 3vw;
+    color: black;
+}
+
+
+
+
+
+
+/* carousel */
+
+.carousel-container {
     width: 100%;
-    position: relative;
-}
-
-.slider-images h2 p {
-    position: relative;
-}
-
-.slider-dots {
-    z-index: 30;
-    top: 90%;
-    position: absolute;
-    display: block;
-    text-align: right;
-    max-width: 1300px;
-    width: 100%;
-    margin-right: 7rem;
-}
-
-.active1 {
-    opacity: 0.5;
-    animation: rotate 0.5s forwards;
-}
-
-@keyframes rotate {
-    from {
-        transform: rotate(0deg);
-      }
-      to {
-        transform: rotate(-385deg);
-      }
+    margin: 0 auto;
+    overflow: hidden;
+  }
+  
+  .carousel-slide {
+    display: flex;
+    justify-content: center;
+    /* align-items: center; */
+    /* margin-left: 25%; */
+    margin-bottom: 20px;
+    margin-left: -4%;
+  }
+  
+  .carousel-slide img {
+    width: 20%;
+    height: auto;
+    /* margin-right: 20px; */
+    margin-left: 40%;
+  }
+  
+  .testimonial-text {
+    /* flex: 1; */
+    /* width: 50%; */
+    text-align: center;
+    padding: 2%;
+    width: 60%;
+    margin: auto;
+  }
+  
+  .testimonial-text h2 {
+    margin-top: 0;
+    font-size: 2vw;
+    /* margin-bottom: 25%; */
+  }
+  
+  .testimonial-text p {
+    margin-bottom: 0;
+    font-size: 1.2vw;
+    /* width: 40%; */
   }
 
-#img1 {
-    width: 100%;
-    float: right;
-}
+  #contact-header {
+    margin-top: 2%;
+  }
 
-.slider-images .slider-dots img {
-    display: inline;
-}
-
-.slider-images img {
-    display: none;
-}
-
-.slider-text h2.active2 {
-    display: inline-block;
-}
-
-.slider-images img.active1 {
-    display: inline-block;
-}
-
-.slider-images img.active {
-    display: inline-block;
-}
-
-.slider:before {
-    content: "";
-    width: 50%;
-    background-color: #244AC2;
-    position: absolute;
-    height: 7.5rem;
-    left: 0%;
-    top: 43%;
-}
-
-.slider:after {
-    content: "";
-    width: 50%;
-    background-color: red;
-    position: absolute;
-    height: 7.5rem;
-    right: 0%;
-    top: 43%;
-}
-
-.arrow {
-    background-image: url(https://visiofund.co.za/wp-content/themes/visio/images/slider-next.svg);
-    position: absolute;
-    top: 56%;
-    right: 2%;
-    margin-top: -5rem;
+  #prevBtn, #nextBtn {
+    width: 7%;
     cursor: pointer;
-    z-index: 30;
-    width: 7.5rem;
-    height: 7.5rem;
-    background-repeat: no-repeat;
-    background-size: contain;
-} */
+    color: white;
+    font-size: 4vw;
+    border: none;
+    margin-top: -10%;
+    z-index: 99;
+    position: absolute;
+  }
+
+  #prevBtn {
+    float: left;
+  }
+
+  #nextBtn {
+    float: right;
+    margin-left: 75%;
+  }
+  
+  
+
+  /* #prevBtn {
+    padding: 10px 20px;
+    background-color: white;
+    color: black;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+  }
+
+  #nextBtn {
+    padding: 10px 20px;
+    background-color: white;
+    color: black;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+  } */
+  
+  /* #prevBtn:hover {
+    background-color: white;
+    color: black;
+  }
+
+  #nextBtn:hover {
+    background-color: white;
+    color: black;
+  } */
+  
+
+
+
+
+#contact {
+    margin-bottom: 4%;
+}
+
+.contactform {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+form {
+    width: 100%;
+    max-width: 1900px;
+}
+
+.input-group {
+    margin-bottom: 3%;
+    position: relative;
+}
+
+input, textarea {
+    width: 100%;
+    padding: 3%;
+    outline: 0;
+    color: white;
+    background-color: transparent;
+    font-size: 19px;
+    border: 1px solid white;
+    margin-top: 2%;
+}
+
+label {
+    height: 100%;
+    position: absolute;
+    left: 0;
+    top: 0;
+    padding: 3%;
+    color: white;
+    cursor: text;
+    transition: 0.2s;
+    margin-top: 2%;
+}
+
+#messagelabel {
+    padding-left: 2%;
+    padding-top: 2%;
+}
+
+.emaill {
+    padding-left: 2%;
+}
+
+
+button {
+    padding: 2% 0;
+    color: white;
+    outline: none;
+    background-color: transparent;
+    border: 1px solid white;
+    width: 100%;
+    cursor: pointer;
+    font-size: 15px;
+}
+
+input:focus~label,
+input:valid~label {
+    top: -70%;
+    font-size: 19px;
+}
+
+textarea:focus~label,
+textarea:valid~label {
+    top: -25%;
+    font-size: 19px;
+}
+
+.row {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 1%;
+}
+
+.row .input-group {
+    width: 49%;
+}
 
 
 
@@ -676,6 +813,53 @@ background: linear-gradient(180deg, rgba(84,86,205,1) 0%, rgba(248,8,159,1) 49%,
 } */
 
 /* @media only screen and (max-width: 875px) { */
+@media only screen and (max-width: 1300px) {
+    .cards {
+        display: inline-grid;
+        height: 17rem;
+    }
+}
+
+@media only screen and (max-width: 1500px) {
+    .cards {
+        height: 17rem;
+    }
+
+    textarea:focus~label,
+    textarea:valid~label {
+    top: -20%;
+    font-size: 19px;
+}
+
+.testimonial-text h2 {
+    margin-top: 0;
+    font-size: 3vw;
+  }
+  
+  .testimonial-text p {
+    margin-bottom: 0;
+    font-size: 2vw;
+  }
+}
+
+@media only screen and (max-width: 1100px) {
+    .cards {
+        height: 17rem;
+    }
+
+    textarea:focus~label,
+    textarea:valid~label {
+    top: -19%;
+    /* font-size: 2vw; */
+}
+
+.carousel-slide img {
+    width: 40%;
+    margin-left: 30%;
+}
+}
+
+
 @media only screen and (max-width: 1255px) {
     .header {
         padding-left: 20px;
@@ -691,10 +875,14 @@ background: linear-gradient(180deg, rgba(84,86,205,1) 0%, rgba(248,8,159,1) 49%,
         width: 100%;
         background-color: rgba(0, 0, 0, 0.9);
         text-align: center;
+        transition: transform 0.3s ease;
+        transform: translateY(-100%);
     }
 
     .navbar.active {
         display: flex;
+        background-color: black;
+        transform: translateY(0)
     }
 
     .navbar a {
@@ -713,15 +901,9 @@ background: linear-gradient(180deg, rgba(84,86,205,1) 0%, rgba(248,8,159,1) 49%,
     }
 }
 
-@media only screen and (min-width: 900px) {
-
-    .h1 {
-        /* font-size: 5.5vw; */
-        margin-left: 0;
-    }
-
+@media only screen and (max-width: 950px) {
     .leftcont a {
-        margin-left: 9%;
+        font-size: 20px;
     }
 }
 
@@ -744,14 +926,30 @@ background: linear-gradient(180deg, rgba(84,86,205,1) 0%, rgba(248,8,159,1) 49%,
     } */
 }
 
+
+@media only screen and (max-width: 650px) {
+    .aboutme {
+        font-size: 15px !important;
+    }
+
+    #aboutxt {
+        font-size: 15px;
+    }
+}
+
 @media only screen and (max-width: 600px) {
     .icons i {
         margin: -20%;
     }
 
-    .skills h2 {
-        font-size: 12px;
+    .carousel-slide img {
+        width: 50%;
+        margin-left: 25%;
     }
+
+    /* .skills h2 {
+        font-size: 10px;
+    } */
 
     /* .section2-cont {
         display: inline-flex;
@@ -763,10 +961,79 @@ background: linear-gradient(180deg, rgba(84,86,205,1) 0%, rgba(248,8,159,1) 49%,
     } */
 }
 
+
 @media only screen and (max-width: 700px) {
     .leftcont a {
         font-size: 14px;
     }
+    .resume {
+        display: ruby;
+    }
+
+    .cards {
+        width: 100%;
+    }
+
+    .cards i {
+        margin-bottom: -17%;
+        margin-top: 3%;
+        font-size: 10vw;
+    }
+
+    .top-cards {
+        display: inline-grid;
+        padding-bottom: 0;
+    }
+
+    .bottom-cards {
+        display: inline-grid;
+    }
+
+    .scards {
+        margin-bottom: 1%;
+        width:60%;
+        margin-left: 40%;
+        border-radius: 0;
+    }
+
+    #scards {
+        margin-left: 0%;
+        /* margin-right: 12%; */
+    }
+
+    .skills i {
+        font-size: 17vw;
+    }
+
+    .toprow {
+        display: inline-grid;
+        justify-content: center;
+        align-items: center;
+        margin-left: 0%;
+    }
+    
+    .bottomrow {
+        display: inline-grid;
+        justify-content: center;
+        align-items: center;
+        margin-left: 0%;
+    }
+
+    .pcards {
+        width: 100%;
+    }
+
+    .projects {
+        margin-right: 5%;
+        margin-left: -3%;
+    }
+
+    i.fa-brands.fa-square-github {
+        font-size: 6vw;
+        color: black;
+    }
+      
+
 }
 
 @media only screen and (max-width: 800px) {
@@ -781,6 +1048,26 @@ background: linear-gradient(180deg, rgba(84,86,205,1) 0%, rgba(248,8,159,1) 49%,
     .skills h2 {
         font-size: 15px;
     }
+
+    input:focus~label,
+input:valid~label {
+    display: none;
+}
+
+textarea:focus~label,
+textarea:valid~label {
+    display: none;
+}
+
+.testimonial-text h2 {
+    margin-top: 0;
+    font-size: 4vw;
+  }
+  
+  .testimonial-text p {
+    margin-bottom: 0;
+    font-size: 3vw;
+  }
 }
 
 @media only screen and (max-width: 520px) {
@@ -795,6 +1082,50 @@ background: linear-gradient(180deg, rgba(84,86,205,1) 0%, rgba(248,8,159,1) 49%,
     .aboutme {
         font-size: 13px;
     }
+
+    .leftcont a {
+        /* font-size: 10px; */
+        /* padding: 0.1rem; */
+    }
+    
+    #connect {
+        padding: 0.3rem;
+    }
+
+    .cv {
+        padding: 0.3rem !important;
+    }
+
+    .icons {
+        margin-left: 0;
+    }
+
+    .icons i {
+        font-size: 4vw;
+    }
+
+    i.fa-brands.fa-square-github {
+        font-size: 7vw;
+        color: black;
+    }
+
+    .aboutme {
+        margin-bottom: 5%;
+        width: 100%;
+        margin-left: 0%;
+    }
+
+    #aboutxt {
+        width: 100%;
+        margin-left: 100%;
+    }
+
+    .section2-cont {
+        display: inline-grid;
+        justify-content: center;
+        align-items: center;
+        /* margin-left: 20; */
+    }
 }
 
 @media only screen and (max-width: 450px) {
@@ -804,6 +1135,24 @@ background: linear-gradient(180deg, rgba(84,86,205,1) 0%, rgba(248,8,159,1) 49%,
     .aboutxt {
         font-size: 11px;
     }
+
+    .cards i {
+        font-size: 12vw;
+        margin-bottom: -17%;
+        margin-top: 5%;
+    }
+
+    label {
+        font-size: 4vw;
+    }
+
+    .subhead {
+        font-size: 8vw;
+    }
+
+/* #contact-header {
+    margin-bottom: 5%;
+} */
 }
 
 @media only screen and (max-width: 390px) {
@@ -815,7 +1164,32 @@ background: linear-gradient(180deg, rgba(84,86,205,1) 0%, rgba(248,8,159,1) 49%,
     .cv {
         margin-left: 2% !important;
     }
+
+    .testimonial-text h2 {
+        margin-top: 0;
+        font-size: 5vw;
+      }
+      
+      .testimonial-text p {
+        margin-bottom: 0;
+        font-size: 4vw;
+      }
+
+      #aboutxt {
+        width: 100%;
+        margin-left: 50%;
+        text-align: center;
+    }
 }
+
+@media only screen and (max-width: 350px) {
+    .cards i {
+        font-size: 12vw;
+        margin-bottom: -17%;
+        margin-top: 9%;
+    }
+}
+
 
 /* @media only screen and (max-width: 1680px) {
     .subsection {
